force-app/main/default/objects/Lead/fields/Able_and_Willing_to_Make_the_Product__c.field-meta.xml
<CustomField>
    <fullName>Able_and_Willing_to_Make_the_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Can or would Encirc make the product?</description>
    <inlineHelpText>Can or would Encirc make the product?</inlineHelpText>
    <label>Able and Willing to Make the Product?</label>
    <type>Checkbox</type>
</CustomField>