force-app/main/default/objects/Lead/fields/Able_to_Add_Value__c.field-meta.xml
<CustomField>
    <fullName>Able_to_Add_Value__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Could Encird add value to the customer?</description>
    <inlineHelpText>Could Encird add value to the customer?</inlineHelpText>
    <label>Able to Add Value?</label>
    <type>Checkbox</type>
</CustomField>