force-app/main/default/objects/Lead/fields/Competitor_s_Existing_Customer__c.field-meta.xml
<CustomField>
    <fullName>Competitor_s_Existing_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the lead a meaningful, existing customer of one of Encirc&apos;s competitors?</description>
    <inlineHelpText>Is the lead a meaningful, existing customer of one of Encirc&apos;s competitors?</inlineHelpText>
    <label>Competitor&apos;s Existing Customer?</label>
    <type>Checkbox</type>
</CustomField>