force-app/main/default/objects/Lead/fields/Consideraciones__c.field-meta.xml
<CustomField>
    <fullName>Consideraciones__c</fullName>
    <inlineHelpText>Indicaremos observaciones y consideraciones sobre esta solicitud</inlineHelpText>
    <label>Consideraciones</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>