force-app/main/default/objects/Lead/fields/Current_Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Current_Manufacturer__c</fullName>
    <label>Current Manufacturer</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Current_Manufacturer</valueSetName>
    </valueSet>
</CustomField>