force-app/main/default/objects/Lead/fields/Decision_Process_Known__c.field-meta.xml
<CustomField>
    <fullName>Decision_Process_Known__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does Encirc know and understand the Lead’s decision makers / decision making process?</description>
    <inlineHelpText>Does Encirc know and understand the Lead’s decision makers / decision making process?</inlineHelpText>
    <label>Decision Process Known?</label>
    <type>Checkbox</type>
</CustomField>