force-app/main/default/objects/Lead/fields/Does_Not_Cannibalise_Distributor__c.field-meta.xml
<CustomField>
    <fullName>Does_Not_Cannibalise_Distributor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is Encirc certain that accepting this project would not cannibalise Encirc’s existing distributors’ revenues?</description>
    <inlineHelpText>Is Encirc certain that accepting this project would not cannibalise Encirc’s existing distributors’ revenues?</inlineHelpText>
    <label>Does Not Cannibalise Distributor?</label>
    <type>Checkbox</type>
</CustomField>