force-app/main/default/objects/Lead/fields/Enquiry_date__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_date__c</fullName>
    <label>Enquiry date</label>
    <type>Date</type>
</CustomField>