force-app/main/default/objects/Lead/fields/Lead_Qualification_Comments__c.field-meta.xml
<CustomField>
    <fullName>Lead_Qualification_Comments__c</fullName>
    <description>Please add any comments you may have about any responses above.</description>
    <inlineHelpText>Please add any comments you may have about any responses above.</inlineHelpText>
    <label>Lead Qualification Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>