force-app/main/default/objects/Lead/fields/Lead_Score__c.field-meta.xml
<CustomField>
    <fullName>Lead_Score__c</fullName>
    <description>Creates simple lead score where certain fields are both necessary and sufficient.</description>
    <formula>IF( Volume_Satisfies_Production_Criteria__c , 10, 0)  + 
IF(  Competitor_s_Existing_Customer__c  , 10, 0) +
IF(   Able_and_Willing_to_Make_the_Product__c   , 10, 0) +
IF(   Does_Not_Cannibalise_Distributor__c   , 10, 0) +
IF(   Timeframe_achievable__c   , 10, 0) +
IF(   Decision_Process_Known__c   , 3, 0) +
IF(   Able_to_Add_Value__c   , 3, 0) +
IF(    Other_Strategic_or_Operational_Fit__c    , 3, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>