force-app/main/default/objects/Lead/fields/New_Bottle_Information__c.field-meta.xml
<CustomField>
    <fullName>New_Bottle_Information__c</fullName>
    <label>New Bottle Information</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>