force-app/main/default/objects/Lead/fields/Other_1__c.field-meta.xml
<CustomField>
    <fullName>Other_1__c</fullName>
    <label>Other</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Samples</fullName>
            </value>
            <value>
                <fullName>Supply</fullName>
            </value>
            <value>
                <fullName>Pricing &amp; Samples</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Supply &amp; Pricing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>