force-app/main/default/objects/Lead/fields/Other_Strategic_or_Operational_Fit__c.field-meta.xml
<CustomField>
    <fullName>Other_Strategic_or_Operational_Fit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Would this customer fit in with other strategic or operational goals?</description>
    <inlineHelpText>Would this customer fit in with other strategic or operational goals?</inlineHelpText>
    <label>Other Strategic or Operational Fit?</label>
    <type>Checkbox</type>
</CustomField>