force-app/main/default/objects/Lead/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <description>Product Field That gets updated with product information</description>
    <inlineHelpText>CAMPO NO EDITABLE - RECOGE EN AUTOMATICO LOS PRODUCTOS DEL CONTACTO QUE VIENE A TRAVES DEL CATALOGO VIRTUAL. POR FAVOR NO ESCRIBIR NADA MANUALMENTE</inlineHelpText>
    <label>Product</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>