force-app/main/default/objects/Lead/fields/Sales_Org_Name_Blank__c.field-meta.xml
<CustomField>
    <fullName>Sales_Org_Name_Blank__c</fullName>
    <description>DEPRECATED 12 Nov 2024 case 7911</description>
    <formula>ISPICKVAL( Sales_Organisation_Name__c , &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Org Name Blank</label>
    <type>Checkbox</type>
</CustomField>