force-app/main/default/objects/Lead/fields/Sales_Org_SAP_Code__c.field-meta.xml
<CustomField>
    <fullName>Sales_Org_SAP_Code__c</fullName>
    <description>Set by Owner via User Record</description>
    <formula>TEXT ( Owner:User.Sales_Organisation_SAP_Code__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Set by Owner via User Record</inlineHelpText>
    <label>Sales Org SAP Code</label>
    <type>Text</type>
</CustomField>