force-app/main/default/objects/Lead/fields/Sector__c.field-meta.xml
<CustomField>
    <fullName>Sector__c</fullName>
    <description>What kind of products do they need to fill</description>
    <label>Sector</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sector_Account_Industry_Fifty</valueSetName>
    </valueSet>
</CustomField>