force-app/main/default/objects/Lead/fields/Technical_Line_Drawing__c.field-meta.xml
<CustomField>
    <fullName>Technical_Line_Drawing__c</fullName>
    <label>Technical Line Drawing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>