force-app/main/default/objects/Lead/fields/Timeframe_achievable__c.field-meta.xml
<CustomField>
    <fullName>Timeframe_achievable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the timeframe for delivery rational/achievable?</description>
    <inlineHelpText>Is the timeframe for delivery rational/achievable?</inlineHelpText>
    <label>Timeframe achievable?</label>
    <type>Checkbox</type>
</CustomField>