force-app/main/default/objects/Lead/fields/Volume_Pallets_Web_Capture__c.field-meta.xml
<CustomField>
    <fullName>Volume_Pallets_Web_Capture__c</fullName>
    <description>Used to capture the number of pallets  by comma eliminated list</description>
    <label>Volume Pallets Web Capture</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>