force-app/main/default/objects/Lead/fields/Volume_Satisfies_Production_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Volume_Satisfies_Production_Criteria__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does the potential volume satisfy Encirc’s production criteria?</description>
    <inlineHelpText>Does the potential volume satisfy Encirc’s production criteria?</inlineHelpText>
    <label>Volume Satisfies Production Criteria?</label>
    <type>Checkbox</type>
</CustomField>