force-app/main/default/objects/Lead/fields/Volume_Tons_000__c.field-meta.xml
<CustomField>
    <fullName>Volume_Tons_000__c</fullName>
    <label>Volume Tons (000)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>