force-app/main/default/objects/Lead/fields/Volume_Units_Web_Capture__c.field-meta.xml
<CustomField>
    <fullName>Volume_Units_Web_Capture__c</fullName>
    <description>Comma deliminated field to capture web information  (123, 456, 789)</description>
    <label>Volume Units Web Capture</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>