force-app/main/default/objects/Lead/validationRules/New_Leads_Should_Be_Active.validationRule-meta.xml
<ValidationRule>
    <fullName>New_Leads_Should_Be_Active</fullName>
    <active>true</active>
    <errorConditionFormula>ISNEW()   &amp;&amp;   NOT(ISPICKVAL(Status, &apos;Active&apos;))</errorConditionFormula>
    <errorMessage>The lead should be in &apos;Active&apos; status</errorMessage>
</ValidationRule>