force-app/main/default/objects/Lead/listViews/All_leads.listView-meta.xml
<ListView>
    <fullName>All_leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Sales_Organisation_SAP_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All leads</label>
</ListView>