force-app/main/default/objects/Lead/listViews/LISTA_CANDIDATOS_ACTIVOS.listView-meta.xml
<ListView>
    <fullName>LISTA_CANDIDATOS_ACTIVOS</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>LISTA CANDIDATOS ACTIVOS</label>
</ListView>