force-app/main/default/objects/Lead/listViews/My_Leads1.listView-meta.xml
<ListView>
    <fullName>My_Leads1</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>Volume_Pallets__c</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <filterScope>Mine</filterScope>
    <label>My Leads</label>
</ListView>