force-app/main/default/objects/Lead/listViews/Vidrala_France_Lead_Assignment_Lead.listView-meta.xml
<ListView>
    <fullName>Vidrala_France_Lead_Assignment_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Vidrala France Lead Assignment</label>
    <queue>Vidrala_France_Lead_Assignment</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>